<resources>

    <!--activity_main-->
    <string name="app_name">Mothers Little Helper</string>
    <string name="main_tv_welcome">Welcome, User</string>
    <string name="main_tv_schedule">Schedule an Appointment</string>
    <string name="main_btn_schedule">Schedule</string>
    <string name="main_tv_pending">View Pending Appointment Requests</string>
    <string name="main_btn_pending">View Pending</string>
    <string name="main_tv_settings">Manage User Settings</string>
    <string name="main_btn_settings">Credentials</string>
    <string name="settings_btn_manage_children">Children</string>

    <!--activity_settings_manager-->
    <string name="settings_tv_caption">Manage User Settings</string>
    <string name="settings_tv_values">Manage User Settings</string>
    <string name="settings_btn_edit">Save New Settings</string>
    <string name="settings_btn_clear">Erase All Settings!</string>

    <!--activity_appointment_broker-->
    <string name="setup_request">Create New Appointment</string>
    <string name="button_send_request">Go!</string>

    <string name="service_id_prompt">Choose a Time</string>
    <string-array name="service_id_array_keys">
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>1 Hour 30 Minutes</item>
    </string-array>
    <string-array name="service_id_array_values">
        <item>973</item>
        <item>974</item>
        <item>975</item>
    </string-array>

    <string name="e_id_prompt">Choose a Child Type</string>
    <string-array name="e_id_array_keys">
        <item>Child</item>
        <item>Infant</item>
    </string-array>
    <string-array name="e_id_array_values">
        <item>782</item>
        <item>783</item>
    </string-array>

    <!--activity_child_manager-->
    <string name="main_tv_children">Children</string>
    <string name="children">Children</string>
    <string name="favorites">Favorites</string>
    <string name="add_new_child">Add Child</string>
    <string name="wipe_children">Erase All Children</string>

</resources>
