<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_appointment_broker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_element_padding"
    android:paddingRight="@dimen/activity_element_padding"
    android:paddingTop="@dimen/activity_element_padding"
    android:layout_gravity="center"
    tools:context="com.majway.mlh.appointment.AppointmentBrokerActivity">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/setup_request"
        android:padding="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Spinner
        android:id="@+id/svc_id_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:entries="@array/service_id_array_keys"
        android:prompt="@string/service_id_prompt" />
    <Spinner
        android:id="@+id/e_id_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:entries="@array/e_id_array_keys"
        android:prompt="@string/e_id_prompt" />
    <Button
        android:id="@+id/btnSendAppointmentRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send_request"
        android:padding="16dp"
        android:onClick="onBtnClicked" />
    <TextView
        android:id="@+id/resultView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
