<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_element_padding"
    android:paddingRight="@dimen/activity_element_padding"
    android:paddingTop="@dimen/activity_element_padding"
    android:layout_gravity="center"
    tools:context="com.majway.mlh.SettingsManager">
    <TextView
        android:id="@+id/settingsViewCaption"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/settings_tv_caption"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/settingsView1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Current Settings Will Go Here"
        android:padding="16dp"
        android:layout_below="@+id/settingsViewCaption"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsView1"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Name" />
    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Pass" />
    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Email" />
    <Button
        android:id="@+id/btnEditSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_edit"
        android:padding="16dp"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onBtnClicked" />
    <Button
        android:id="@+id/btnClearSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_clear"
        android:padding="16dp"
        android:layout_below="@+id/btnEditSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="onBtnClicked" />
</RelativeLayout>
